--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
 		<form>
 			<input type="text" name="userName" class="userName" placeholder="学号"><br/>
 			<input type="password" name="password" class="password" placeholder="密码"><br/>
-			<a class="forgetPass" href="">忘记密码?</a><br/>
+			<a class="forgetPass" href="#">忘记密码?</a><br/>
 			<button class="loginBtn">
-				<a href="">登录</a>
+				<a href="#">登录</a>
 			</button><br/>
 		</form>
 	</div>
